--- a/source/src/vm/fmgen/CMakeLists.txt
+++ b/source/src/vm/fmgen/CMakeLists.txt
@@ -14,28 +14,28 @@ SET(s_vm_fmgen_srcs
 )
 
 if(WIN32)
-#add_library(vm_fmgen
-#    ${s_vm_fmgen_srcs}
-#    )
-
-include (GenerateExportHeader)
-add_library(CSPfmgen SHARED
-    ${s_vm_fmgen_srcs}
-    )
-target_link_libraries(CSPfmgen
-	PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../../build-cmake/bin-win32/libCSPemu_utils.dll.a
+	add_library(vm_fmgen SHARED
+		${s_vm_fmgen_srcs}
 	)
-set_target_properties(CSPfmgen PROPERTIES
-			     SOVERSION ${THIS_LIB_VERSION}
-			     VERSION ${THIS_LIB_VERSION}
-			     LINK_INTERFACE_LIBRARIES ""
-			     )
-generate_export_header(CSPfmgen
-        BASE_NAME CSPfmgen
-        EXPORT_MACRO_NAME CSPfmgen_EXPORT
-        EXPORT_FILE_NAME CSPfmgen_Export.h
-        STATIC_DEFINE CSPfmgen_BUILT_AS_STATIC
-)
+
+	include (GenerateExportHeader)
+	add_library(CSPfmgen SHARED
+		${s_vm_fmgen_srcs}
+	)
+	target_link_libraries(CSPfmgen
+		PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../../build-cmake/bin-win32/libCSPemu_utils.dll.a
+	)
+	set_target_properties(CSPfmgen PROPERTIES
+		SOVERSION ${THIS_LIB_VERSION}
+		VERSION ${THIS_LIB_VERSION}
+		LINK_INTERFACE_LIBRARIES ""
+	)
+	generate_export_header(CSPfmgen
+        	BASE_NAME CSPfmgen
+        	EXPORT_MACRO_NAME CSPfmgen_EXPORT
+        	EXPORT_FILE_NAME CSPfmgen_Export.h
+        	STATIC_DEFINE CSPfmgen_BUILT_AS_STATIC
+	)
 
 else()
   if(USE_DEVICES_SHARED_LIB)
