[BUILD][WIN32] TRY:WIN32: Make libCSPcommon_vm DLL.(2)

--- a/source/src/CMakeLists.txt
+++ b/source/src/CMakeLists.txt
@@ -7,7 +7,7 @@ message("* common/common")
 #)
 if(USE_DEVICES_SHARED_LIB)
   add_library(common_${EXE_NAME}
-	config.cpp
+#	config.cpp
 	debugger.cpp
 	)
 else()
