--- a/source/src/vm/common_vm/CMakeLists.txt
+++ b/source/src/vm/common_vm/CMakeLists.txt
@@ -176,33 +176,36 @@ add_definitions(-D__LIBRARY_NAME=\"libCSPcommon_vm.${THIS_LIB_VERSION}\")
 
 if(WIN32)
 include (GenerateExportHeader)
-#add_library(CSPcommon_vm SHARED
-#   ${s_vm_common_vm_srcs}
-#    )
+add_library(CSPcommon_vm SHARED
+   ${s_vm_common_vm_srcs}
+    )
    
-#target_link_libraries(CSPcommon_vm PUBLIC
+target_link_libraries(CSPcommon_vm PRIVATE
+          CSPosd
+	  CSPemu_utils
+	  CSPfmgen
 #	  ${CMAKE_CURRENT_SOURCE_DIR}/../../../build-cmake/bin-win32/libCSPosd.dll.a
 #	  ${CMAKE_CURRENT_SOURCE_DIR}/../../../build-cmake/bin-win32/libCSPemu_utils.dll.a
 #	  Qt5::Core
 #	  Qt5::Gui
 #	  Qt5::OpenGL
 #	  Qt5::Widgets
-#	  ${SDL2_LIBRARIES}
-#	  )
-#set_target_properties(CSPcommon_vm PROPERTIES
-#			     SOVERSION ${THIS_LIB_VERSION}
-#			     VERSION ${THIS_LIB_VERSION}
-#			     LINK_INTERFACE_LIBRARIES ""
-#			     )
-#generate_export_header(CSPcommon_vm
-#       BASE_NAME CSPcommon_vm
-#        EXPORT_MACRO_NAME CSPcommon_vm_EXPORT
-#        EXPORT_FILE_NAME CSPcommon_vm_Export.h
-#        STATIC_DEFINE CSPcommon_vm_BUILT_AS_STATIC
-#)
-add_library(vm_common_vm
-   ${s_vm_common_vm_srcs}
-    )
+	  ${SDL2_LIBRARIES}
+	  )
+set_target_properties(CSPcommon_vm PROPERTIES
+			     SOVERSION ${THIS_LIB_VERSION}
+			     VERSION ${THIS_LIB_VERSION}
+			     LINK_INTERFACE_LIBRARIES ""
+			     )
+generate_export_header(CSPcommon_vm
+       BASE_NAME CSPcommon_vm
+        EXPORT_MACRO_NAME CSPcommon_vm_EXPORT
+        EXPORT_FILE_NAME CSPcommon_vm_Export.h
+        STATIC_DEFINE CSPcommon_vm_BUILT_AS_STATIC
+)
+#add_library(vm_common_vm
+#   ${s_vm_common_vm_srcs}
+#    )
 else()
 
   add_library(CSPcommon_vm SHARED
