[CONFIG] Fix forgetting data of config file.Maybe fixed (；´Д｀)

--- a/source/src/CMakeLists.txt
+++ b/source/src/CMakeLists.txt
@@ -7,13 +7,14 @@ message("* common/common")
 #)
 if(USE_DEVICES_SHARED_LIB)
   add_library(common_${EXE_NAME}
-#	config.cpp
+	config.cpp
 	debugger.cpp
 	)
 else()
   add_library(common_${EXE_NAME}
 	common.cpp
 	config.cpp
+	config_dll.cpp
 	debugger.cpp
 	fileio.cpp
 	fifo.cpp
