[BUILD][CMake] Update TVBOY.

--- a/source/src/vm/tvboy/CMakeLists.txt
+++ b/source/src/vm/tvboy/CMakeLists.txt
@@ -5,6 +5,8 @@ message("* vm/${EXE_NAME}")
 string(TOUPPER "${EXE_NAME}" U_EXE_NAME)
 
 add_library(vm_${EXE_NAME}
+		../mc6847.cpp
+		
 		./memory.cpp
 
 		./tvboy.cpp
