[VM][MICOM_MAHJONG][SVI3X8][TVBOY] Add VMs and UIs for them.Fix some FTBFS.

--- a/source/src/vm/svi3x8/CMakeLists.txt
+++ b/source/src/vm/svi3x8/CMakeLists.txt
@@ -12,6 +12,8 @@ set(SVI3X8_BASE_SRCS
 #	../msx/printer.cpp
 #	../msx/slot_cart.cpp
 #	../msx/slot_mainrom.cpp
+
+	./msx_ex.cpp
 )
 
 if("${U_EXE_NAME}" STREQUAL "EMUSVI3X8")
