[Qt][EMU][EMU_THREAD] MOVE a lot of methods to EMU_TEMPLATE:: and EmuThreadClassBase::.

--- a/source/src/qt/gui/CMakeLists.txt
+++ b/source/src/qt/gui/CMakeLists.txt
@@ -128,9 +128,12 @@ set(s_qt_gui_srcs
 	  draw_thread.cpp
 	  joy_thread.cpp
 	  emu_thread_tmpl.cpp
+	  ../common/emu_thread_slots.cpp
+
 	  qt_debugger_tmpl.cpp
 
 	  menu_flags_tmpl.cpp
+	  
 	  ../common/util_fd2.cpp
 	  ../common/util_hdd2.cpp
 #	  ../common/util_bubble2.cpp
