[VM][PC8801] Merge Upstream 2020-12-15.Still not implement UIs.

--- a/source/src/vm/pc8801/CMakeLists.txt
+++ b/source/src/vm/pc8801/CMakeLists.txt
@@ -7,11 +7,13 @@ string(TOUPPER "${EXE_NAME}" U_EXE_NAME)
 if("${U_EXE_NAME}" STREQUAL "EMUPC8801MA")
 	add_library(vm_emupc8801ma
 		../scsi_host.cpp
+		diskio.cpp
 		pc88.cpp
 		pc8801.cpp
 	)
 else()	
 	add_library(vm_${EXE_NAME}
+		diskio.cpp
 		pc88.cpp
 		pc8801.cpp
 	)
