[VM][General] Merge Upstream 2021-05-06. Some variants of PC-6001 are temporally dropped.

--- a/source/src/vm/bx1/CMakeLists.txt
+++ b/source/src/vm/bx1/CMakeLists.txt
@@ -1,10 +1,11 @@
 cmake_minimum_required (VERSION 2.6)
 
-message("* vm/emubx1")
+message("* vm/${EXE_NAME}")
 
-add_library(vm_emubx1
+add_library(vm_${EXE_NAME}
 	bx1.cpp
 	display.cpp
+	floppy.cpp
 	keyboard.cpp
 	printer.cpp
 )
