[VM][FMTOWNS][JOYSTICK][MOUSE] Re-Implement mouse.Still not working.
[VM][FMTOWNS][JOYSTICK][6BUTTONS_PAD] Maybe work fine.

--- a/source/src/vm/fmtowns/CMakeLists.txt
+++ b/source/src/vm/fmtowns/CMakeLists.txt
@@ -20,7 +20,7 @@ set(VM_FMTOWNS_DEV_SRCS
 	joystick.cpp
 	joypad_2btn.cpp
 	joypad_6btn.cpp
-#	mouse.cpp
+	mouse.cpp
 	
 	msdosrom.cpp
 	serialrom.cpp
