[VM][FMTOWNS][CDROM] Split virtual image parsers to separate sourcecode files.

--- a/source/src/vm/fmtowns/CMakeLists.txt
+++ b/source/src/vm/fmtowns/CMakeLists.txt
@@ -27,6 +27,10 @@ set(VM_FMTOWNS_DEV_SRCS
 	dictionary.cpp
 	
 	cdrom.cpp
+	cdrom_cue_parser.cpp
+	cdrom_ccd_parser.cpp
+	cdrom_iso_parser.cpp
+	
 	crtc.cpp
 	towns_memory.cpp
 	towns_scsi_host.cpp
