[OSD][Qt][SOUND][DONOTBUILD] WIP: Available compile with new sound driver.This still be WIP.

--- a/source/src/qt/CMakeLists.txt
+++ b/source/src/qt/CMakeLists.txt
@@ -1,11 +1,15 @@
 message("* qt/osd")
-SET(THIS_LIB_VERSION 8.4.0)
+SET(THIS_LIB_VERSION 8.5.0)
 
 set(s_qt_osd_headers
 	osd_base.h
 	osd_socket.h
 	
     sound_buffer_qt.h
+	
+	osd_sound_mod_template.h
+	osd_sound_mod_qtmultimedia.h
+	
 )
 
 MAKE_WRAP_CPP(s_qt_osd_headers_MOC ${s_qt_osd_headers})
@@ -21,6 +25,11 @@ SET(s_qt_osd_srcs
 	osd_video.cpp
 	qudpsocket2.cpp
 	qtcpsocket2.cpp
+	
+	osd_sound_mod_template.cpp
+	
+	osd_sound_mod_qtmultimedia.cpp
+	
 	sound_buffer_qt.cpp
 	
 	${s_qt_osd_headers_MOC}
