--- a/source/vc++2017/bubcom80.vcxproj.filters
+++ b/source/vc++2017/bubcom80.vcxproj.filters
@@ -243,6 +243,15 @@
     <Image Include="..\src\res\bubcom80.ico">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="..\src\res\indicator\access_green.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\src\res\indicator\access_off.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\src\res\indicator\access_on.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="..\src\res\bubcom80.rc">
