[General][UI][MP85] Fix wrong behavior.

--- a/source/src/qt/machines/mp85/CMakeLists.txt
+++ b/source/src/qt/machines/mp85/CMakeLists.txt
@@ -1,10 +1,10 @@
 message("* qt/${EXE_NAME}")
 
-set(s_qt_tk80bs_headers
+set(s_qt_${EXE_NAME}_headers
 	  menuclasses.h
 )
 
-MAKE_WRAP_CPP(s_qt_${EXE_NAME}_headers_MOC ${s_qt_tk80bs_headers})
+MAKE_WRAP_CPP(s_qt_${EXE_NAME}_headers_MOC ${s_qt_${EXE_NAME}_headers})
 
 add_library(qt_${EXE_NAME}
 	  MainWindow.cpp
