[EMU_THREAD][Qt] Move some slots into utils.cpp and inputs.cpp .

--- a/source/src/qt/gui/CMakeLists.txt
+++ b/source/src/qt/gui/CMakeLists.txt
@@ -143,6 +143,8 @@ set(s_qt_gui_srcs
 	  util_hdd2.cpp
 
 	  ../emu_thread/emu_thread_tmpl.cpp
+	  ../emu_thread/utils.cpp
+	  ../emu_thread/inputs.cpp
 	  ../emu_thread/emu_thread_slots.cpp
 )
 add_definitions(-D__GUI_LIBRARY_NAME=\"libCSPgui.${THIS_LIB_VERSION}\")
